# UAV-guided-landing

./: README.md
detector/: CMakeLists(复件).txt  CMakeLists.txt  package.xml
detector/config/: param_delay_landing.yaml  param_delay_move_curve_landing.yaml  param_delay_move_landing.yaml  param_landing.yaml  param_landing_20240220.yaml  param_landing_20240301.yaml  param_landing_20240315.yaml  param_landing_LMPC.yaml  param_move_curve_landing.yaml
detector/include/: Fuzzy_PID.h  Incremental_PID.h  math_utils.h  mpc.h  mpc_20231218.h  mpc_20240220.h  mpc_20240301.h  mpc_move_landing.h  simulation_detector.h  simulation_detector_20231218.h  simulation_detector_20240220.h  simulation_detector_20240301.h  simulation_detector_landing.h  simulation_detector_move_curve_landing.h
detector/launch/: detector_vel.launch  feedback_delay_node.launch  forward_delay_node.launch  simulation_detector.launch  simulation_detector_landing.launch  simulation_detector_move_curve_landing.launch  simulation_detector_move_landing.launch
detector/src/: Fuzzy_PID.cpp  Incremental_PID.cpp  delay_node.cpp  detector_vel(复件).cpp  feedback_delay_node.cpp  forward_delay_node.cpp  mpc.cpp  mpc_20231218.cpp  mpc_20240220.cpp  mpc_20240301.cpp  mpc_landing.cpp  mpc_move_landing.cpp  simulation_detector.cpp  simulation_detector_20231218.cpp  simulation_detector_20240220.cpp  simulation_detector_20240301.cpp  simulation_detector_landing.cpp  simulation_detector_move_curve_landing.cpp  simulation_detector_move_landing.cpp
detector/src/code_gen/: Nmpc_nlp.c
model_editor_models/april_tag/: model.config  model.sdf
model_editor_models/april_tag/materials/scripts/: aruco_16.material
model_editor_models/moving_platform/: model(复件).sdf  model.config  model.sdf
model_editor_models/p450_april_tag/: model(复件).sdf  model.config  model.sdf
model_editor_models/p450_aruco/: model.config  model.sdf
simulation/: package.xml
simulation/config/: moving_platform_control_param.yaml
simulation/launch/: auto_landing(复件).launch  auto_landing.launch  auto_landing_test.launch  auto_move_landing_curve.launch  auto_move_landing_straight.launch  moving_platform.launch  simulation_setup.launch  uav_with_aruco_simulation_setup.launch
simulation/shell/: auto_landing.sh  auto_move_landing_curve.sh  auto_move_landing_straight.sh  delay_auto_landing.sh  delay_auto_move_landing_curve.sh  delay_auto_move_landing_straight.sh
simulation/worlds/: uav_landing_on_moving_platform.world
uav_control/uav_control/: CMakeLists.txt  package.xml
uav_control/uav_control/src/: uav_auto_takeoff.cpp  uav_auto_takeoff_backup(origin).cpp  uav_auto_takeoff_backup(timer).cpp  uav_auto_takeoff_with_delay.cpp
uav_control/uav_msgs/: CMakeLists.txt  package.xml
uav_control/uav_msgs/msg/: feedback_delay.msg
